# batcamp

./: .codacy.yml  .flake8  .gitignore  .prospector.yaml  AGENTS.md  DEBT.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  _resample_common.py  environment.yml  good-practices.md  octree_test_support.py  private_use_inventory.md  publish.md  pypi.md  pyproject.toml  ray-performance-plan.md  ray_perf_microbench.py  resample_grid_vs_ray.py  resample_random_points.py  resample_xy_plane.py  resampling_compare.py  synthetic_resampling_gallery.py
.githooks/: pre-commit
.github/workflows/: tests.yml
batcamp/: __init__.py  _xyz_refined_event_walk.py  base.py  builder.py  builder_cartesian.py  builder_spherical.py  camera.py  cartesian.py  cartesian_crossing_trace.py  constants.py  face_neighbors.py  interpolator.py  interpolator_cartesian.py  interpolator_spherical.py  octree.py  octree_cartesian.py  octree_spherical.py  persistence.py  ray.py  raytracer.py  raytracer_cartesian.py  raytracer_spherical.py  raytracing.py  review_findings.md  rpa_crossing_trace.py  shared.py  shared_types.py  spherical.py  spherical_crossing_trace.py  timing.py  topological.py  trilinear_shared.py
examples/: benchmark_grid_vs_ray.py  benchmark_helpers.py  benchmark_random_points.py  benchmark_ray_step_costs.py  benchmark_star_movie.py  benchmark_xy_plane.py  cartesian_octree_read_large_file.ipynb  integrals.ipynb  merge.ipynb  octree.ipynb  octree_interpolator_demo.ipynb  octree_ray_demo.ipynb  octree_resampling_plane_sphere.ipynb  quick_start.ipynb  ray.ipynb  ray_api_sketch.ipynb  ray_fast_two_pooch.ipynb  ray_flyby.py  ray_image.ipynb  resampling.ipynb
sample_data/: z=0_var_1_n00006003.plt  z=0_var_1_n00060005.plt
scripts/: notebook_state.py
tests/: conftest.py  fake_dataset.py  octree_test_support.py  sample_data_helper.py  test_builder.py  test_camera.py  test_cartesian_crossing_trace.py  test_example_imports.py  test_example_scripts.py  test_face_neighbors.py  test_fake_inputs.py  test_interpolator_edges.py  test_interpolator_synthetic.py  test_markdown_docs.py  test_no_foreign_private_names.py  test_notebook_execution.py  test_notebook_smoke.py  test_notebooks.py  test_octree_advanced.py  test_octree_builder_edge_cases.py  test_octree_consistency.py  test_octree_context.py  test_octree_fake_edge_cases.py  test_octree_interpolator.py  test_octree_interpolator_edge_cases.py  test_octree_lookup_interpolation_synthetic.py  test_octree_performance.py  test_octree_persistence.py  test_octree_regressions.py  test_octreeraytracer.py  test_perf_guardrail.py  test_persistence.py  test_pooch_smoke.py  test_quickstart.py  test_quickstart_contract.py  test_ray.py  test_ray_api.py  test_ray_domain.py  test_ray_interpolator.py  test_ray_march.py  (+15 more)
