[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batcamp"
version = "0.2.0"
description = "Octree reconstruction and interpolation utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Dag Evensberget" },
]
dependencies = [
  "batread",
  "numpy",
  "numba",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "flake8",
  "pooch",
  "nbclient",
  "nbformat",
  "ipykernel",
  "matplotlib",
  "scipy",
  "build",
  "twine",
]
examples = [
  "scipy",
  "matplotlib",
  "pooch",
  "jupyter",
  "nbconvert",
  "ipykernel",
]

[tool.setuptools.packages.find]
include = ["batcamp*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
markers = [
  "design_lockin: implementation-locking tests",
  "pooch: tests that fetch sample files via pooch/network",
  "perf: performance-sensitive tests",
]
