[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batcamp"
version = "0.3.1"
description = "Octree reconstruction and interpolation utilities"
readme = "pypi.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dag Evensberget" },
]
dependencies = [
  "batread",
  "numpy",
  "numba",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
  "flake8",
  "pooch",
  "tqdm",
  "nbclient",
  "nbformat",
  "ipykernel",
  "matplotlib",
  "scipy",
  "build",
  "twine",
]
examples = [
  "scipy",
  "matplotlib",
  "pooch",
  "tqdm",
  "jupyter",
  "nbconvert",
  "ipykernel",
]

[tool.setuptools.packages.find]
include = ["batcamp*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
markers = [
  "design_lockin: implementation-locking tests",
  "pooch: tests that fetch sample files via pooch/network",
  "perf: performance-sensitive tests",
]

[tool.coverage.run]
omit = [
  "tests/*",
  "examples/*",
]

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
